--- a/index.html
+++ b/index.html
@@ -36,19 +36,23 @@
                     <div>
                         <h3>HARD SKILLS</h3>
                         <ul>
+                            <li>AS400</li>
+                            <li>SQL / DB2</li>
+                            <li>WinDev</li>
+                            <li>Langages informatiques :<br>
+                                &emsp;HTML, CSS3, PHP, Python</li>
                             <li>Utilisation d’outils bureautiques :<br>
                                 &emsp;Crytal Reports, Word, Excel</li>
-                            <li>Enregistrer et suivre l'avancement de dossier</li>
-                            <li>Appliquer les procédures propres à son poste</li>
-                            <li>Langages informatiques :<br>
-                                &emsp;HTML, CSS3, JavaScript, Python, MySQL</li>
                             <li>GitHub</li>
-                            <li>Méthode Agile</li>
+                            <li>Méthodes Agiles</li>
                         </ul>
                     </div>
 
                     <h3>EXPERIENCES PROFESSIONNELLES</h3>
                     <ol class="experience_pro">
+                        <li><span>ANALYSTE DEVELOPPEUSE- ASP Global Service</span><br>
+                            11/2021 - en cours - Marcilly-d'Azergues<br><span class="saut_de_ligne">xx</span>
+                            </li>
                         <li><span>DEVELOPPEUSE INFORMATIQUE- Proges Plus</span><br>
                             Stage - septembre 2021 - La Tour-de-Salvagny<br>
                             Patrice de Bonnière - 06 62 10 63 63<br><span class="saut_de_ligne">xx</span>
@@ -85,8 +89,6 @@
                     <ul>
                         <li>06 50 81 28 99</li>
                         <li>charlotte.cozian@wanadoo.fr</li>
-                        <li>17 rue de Paris 69890</li>
-                        <li>La Tour-de-Salvagny</li>
                         <li>GitHub : <a href="https://github.com/Charlotte-Cozian"
                             title="Page d'accueil de mon compte Git Hub" 
                             target="_blank">@Charlotte-Cozian</a></li>
