--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
                     <div>
                         <h3>HARD SKILLS</h3>
                         <ul>
+                            <li>M3 (Infor)</li>
                             <li>AS400</li>
                             <li>SQL / DB2</li>
                             <li>WinDev</li>
                             <li>Langages informatiques :<br>
-                                &emsp;HTML, CSS3, PHP, Python</li>
+                                &emsp;HTML, CSS3, Angular, PHP, Python, JAVA</li>
                             <li>Utilisation d’outils bureautiques :<br>
                                 &emsp;Crytal Reports, Word, Excel</li>
                             <li>GitHub</li>
@@ -50,10 +51,13 @@
 
                     <h3>EXPERIENCES PROFESSIONNELLES</h3>
                     <ol class="experience_pro">
-                        <li><span>ANALYSTE DEVELOPPEUSE- ASP Global Service</span><br>
-                            11/2021 - en cours - Marcilly-d'Azergues<br><span class="saut_de_ligne">xx</span>
+                        <li><span>CONSULTANTE TECHNIQUE - Hetic3</span><br>
+                            11/2022 - en cours - Dardilly<br><span class="saut_de_ligne">xx</span>
                             </li>
-                        <li><span>DEVELOPPEUSE INFORMATIQUE- Proges Plus</span><br>
+                        <li><span>ANALYSTE DEVELOPPEUSE - ASP Global Service</span><br>
+                            11/2021 - 10/2022 - Marcilly-d'Azergues<br><span class="saut_de_ligne">xx</span>
+                            </li>
+                        <li><span>DEVELOPPEUSE INFORMATIQUE - Proges Plus</span><br>
                             Stage - septembre 2021 - La Tour-de-Salvagny<br>
                             Patrice de Bonnière - 06 62 10 63 63<br><span class="saut_de_ligne">xx</span>
                             </li>
